--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -176,6 +176,7 @@ fieldset[disabled] .btn-shop.active {
 }
 .lower-cont{
 	margin-top: 170px;
+	min-height: 715px;
 }
 .btn-shop{
 	font-family: 'Lora', serif;
