--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -233,14 +233,17 @@ fieldset[disabled] .btn-shop.active {
 		margin-top: 5px;
 	}
 	.fa{
-		margin: 0px 15px;
+		margin: 0px 10px;
 	}
-	.copy-right{
-		margin-right: 15px;
+	.copyright{
+		margin-right: 10px;
 	}
 	.navbar-toggle{
 		padding: 7px;
 		margin-right: 10px;
+	}
+	.footer-container{
+		margin-left: 0px;
 	}
 }
 .wrapper{
