--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -240,10 +240,15 @@ fieldset[disabled] .btn-shop.active {
 	}
 	.navbar-toggle{
 		padding: 7px;
-		margin-right: 10px;
+		margin-right: 5px;
+		margin-top: 5px;
 	}
 	.footer-container{
 		margin-left: 0px;
+	}
+	.navbar-toggle .icon-bar {
+	    display: block;
+	    width: 15px;
 	}
 }
 .wrapper{
