--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -241,7 +241,7 @@ fieldset[disabled] .btn-shop.active {
 	.navbar-toggle{
 		padding: 7px;
 		margin-right: 5px;
-		margin-top: 5px;
+		margin-top: 10px;
 	}
 	.footer-container{
 		margin-left: 0px;
@@ -249,6 +249,9 @@ fieldset[disabled] .btn-shop.active {
 	.navbar-toggle .icon-bar {
 	    display: block;
 	    width: 15px;
+	}
+	.videos-nav{
+		padding-top: 0px;
 	}
 }
 .wrapper{
