--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -253,6 +253,12 @@ fieldset[disabled] .btn-shop.active {
 	.videos-nav{
 		padding-top: 0px;
 	}
+	.navbar-collapse{
+		text-align: right;
+	}
+	.logo{
+		font-size: 18px;
+	}
 }
 .wrapper{
 	overflow-x:hidden;
