--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -263,6 +263,20 @@ fieldset[disabled] .btn-shop.active {
 .wrapper{
 	overflow-x:hidden;
 }
+
+@media only screen and (min-width : 767px) and (max-width : 967px) {
+	.logo{
+		font-size: 17px;
+	}
+	.linda{
+		font-size: 20px;
+	}
+	.nav>li>a {
+		padding: 10px 6px;
+	}
+}
+
+
 	</style>
   </head>
 
