--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -231,6 +231,7 @@ fieldset[disabled] .btn-shop.active {
 	}
 	.linda-col{
 		margin-top: 5px;
+		margin-bottom: 15px;
 	}
 	.fa{
 		margin: 0px 10px;
@@ -258,6 +259,16 @@ fieldset[disabled] .btn-shop.active {
 	}
 	.logo{
 		font-size: 18px;
+	}
+	.mobile-shop-btn{
+	    margin: 5px 0px;
+	    float: right;
+	}
+	.lower-cont{
+		margin-top: 108px;
+	}
+	.linda{
+		font-size: 24px;
 	}
 }
 .wrapper{
@@ -303,7 +314,6 @@ fieldset[disabled] .btn-shop.active {
           </div>
 	        <div class="col-sm-12 linda-col mobile-bot">
 	            <h2 class="linda">Linda Koopersmith</h2>
-	          	<button class="btn btn-shop">Shop Products</button>
 	        </div>
           <div id="navbar" class="navbar-collapse collapse">
           	<div class="col-sm-4">
@@ -312,6 +322,7 @@ fieldset[disabled] .btn-shop.active {
 	              <li class="gallery-nav"><a href="/gallery">Gallery</a></li>
 	              <li class="about-nav"><a href="/about">About</a></li>
 	              <li class="contact-nav"><a href="/contact">Contact</a></li>
+	          	<button class="btn btn-shop mobile-bot mobile-shop-btn">Shop Products</button>
 	            </ul>
 	        </div>
 	        <div class="col-sm-4 linda-col desktop-bot">
