--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -322,14 +322,14 @@ fieldset[disabled] .btn-shop.active {
 	              <li class="gallery-nav"><a href="/gallery">Gallery</a></li>
 	              <li class="about-nav"><a href="/about">About</a></li>
 	              <li class="contact-nav"><a href="/contact">Contact</a></li>
-	          	<button class="btn btn-shop mobile-bot mobile-shop-btn">Shop Products</button>
+	          	<button class="btn btn-shop mobile-bot mobile-shop-btn" onclick="location.href='https://the-beverly-hills-organizer.myshopify.com/'" type="button">Shop Products</button>
 	            </ul>
 	        </div>
 	        <div class="col-sm-4 linda-col desktop-bot">
 	            <h2 class="linda">Linda Koopersmith</h2>
 	        </div>
 	        <div class="col-sm-4 desktop-bot">
-	          	<button class="btn btn-shop">Shop Products</button>
+	          	<button class="btn btn-shop" onclick="location.href='https://the-beverly-hills-organizer.myshopify.com/'" type="button">Shop Products</button>
 	        </div>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
